# tts_impl

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: readme.md
config/hifigan/: base.yml
example/: create_hifigan.py
note/: configuration.md  functional.md  hifigan.md  net.md  plan_recipie_system.md  preprocessing.md  readme.md  recipe.md  todo.md  ライブラリ連携機能.md
scripts/: benchmark_monotonic_alignment_search.py  check_available_mas_alogirhtms.py  generate_random_wf.py  pqmf.py  preprocess_example.py  test_audio_dataset.py  test_vits.py
scripts/ddsp_param_estim/: optimize.py
scripts/hifigan/: preprocess.py  readme.md  train.py
scripts/nsf_hifigan/: preprocess.py  train.py
scripts/recipe/ddsp/: ddsp.py
scripts/recipe/ddsp_vc/: ddsp_vc.py
scripts/recipe/hifigan/: hifigan.py
scripts/recipe/modern_vits/: modern_vits.py
scripts/recipe/nh_vits/: nh_vits.py
scripts/recipe/nhvc/: nhvc.py
scripts/recipe/nsf_grux/: nsf_grux.py
scripts/recipe/nsf_hifigan/: nsf_hifigan.py
scripts/recipe/nsf_vits/: nsf_vits.py
scripts/recipe/vits/: vits.py
scripts/recipe_ddsp/: ddsp.py
scripts/recipe_hifigan/: hifigan.py
scripts/recipe_nsf_hifigan/: nsf_hifigan.py
scripts/recipe_nsf_vits/: nsf_vits.py
scripts/recipe_ulvcdr/: ulvcdr.py
scripts/recipe_vits/: vits.py
scripts/tmp/: a.py  b.py  benchmark_monotonic_alignment_search.py  c.py  dwconv1d.py  fix_union.py  pqmf.py  preprocess_example.py  update_typing.py
src/net/e2e_tts/jets/: length_regurator.py
src/net/vocoder/hifigan/: __init__.py  loss.py
src/tts_impl/: __init__.py
src/tts_impl/acoustic_feature_extractions/: __init__.py  mel_processing.py  pitch_estimation.py
src/tts_impl/config/: base.py
src/tts_impl/dataset/: __init__.py  audio.py  vocoder.py
src/tts_impl/functional/: __init__.py  average_by_duration.py  ddsp.py  energy_estimation.py  f0_estimation.py  f0_interpolation.py  feature_retrieval.py  forced_align.py  length_regurator.py  midi.py  pad.py  parallel_scan.py  upsample.py  vad.py
src/tts_impl/functional/monotonic_align/: .gitignore  __init__.py  mas_naive.py  mas_numba.py  mas_torch_jit.py  mas_triton.py
src/tts_impl/g2p/: __init__.py  base.py  protocol.py  pyopenjtalk.py
src/tts_impl/net/: __init__.py  base.py
src/tts_impl/net/aligner/: __init__.py  alginment_module.py  forced_align.py
src/tts_impl/net/base/: __init__.py  aligner.py  state.py  state_space.py  stateful.py  tts.py  vocoder.py
src/tts_impl/net/codec/: quantizer.py
src/tts_impl/net/codec/soundstream/: encdec.py
src/tts_impl/net/common/: __init__.py  activation.py  causal_conv.py  convnext.py  ddpm.py  grux.py  loss.py  mamba.py  mingru.py  normalization.py  quantizer.py  stft.py  transformer.py  wn.py
src/tts_impl/net/protocol/: __init__.py  aligner.py  tts.py  vocoder.py
src/tts_impl/net/tts/: __init__.py  base.py  length_regurator.py
src/tts_impl/net/tts/fastspeech2/: generator.py  length_regurator.py  modules.py
src/tts_impl/net/tts/fastspeech2/transformer/: layers.py  modules.py  sub_layers.py
src/tts_impl/net/tts/jets/: alignments.py  gaussian_upsamling.py
src/tts_impl/net/tts/modern_vits/: __init__.py  lightning.py  models.py
src/tts_impl/net/tts/nano_tts/: model.py
src/tts_impl/net/tts/nh_tts/: generator.py
src/tts_impl/net/tts/nh_vits/: __init__.py  lightning.py  losses.py  models.py
src/tts_impl/net/tts/nsf_vits/: __init__.py  lightning.py  losses.py  models.py
src/tts_impl/net/tts/vits/: __init__.py  attentions.py  commons.py  lightning.py  losses.py  models.py  modules.py  transforms.py
src/tts_impl/net/tts/vits/monotonic_align/: __init__.py  core.pyx
src/tts_impl/net/vc/: base.py
src/tts_impl/net/vc/ddsp_vc/: generator.py  lightning.py  speaker_classifier.py
src/tts_impl/net/vc/ddspvc/: generator.py  lightning.py  speaker_classifier.py
src/tts_impl/net/vc/dspvc/: generator.py  speaker_classifier.py
src/tts_impl/net/vc/nhvc/: __init__.py  generator.py  lightning.py
src/tts_impl/net/vocoder/: __init__.py  base.py  discriminator.py  oscillator.py
src/tts_impl/net/vocoder/bigvgan/: generator.py
src/tts_impl/net/vocoder/ddsp/: __init__.py  fir.py  generator.py  lightning.py  ultralight.py  vocoder.py
src/tts_impl/net/vocoder/hifigan/: __init__.py  config.py  discriminator.py  generator.py  lightning.py  loss.py  post_module.py  pretrained.py  utils.py
src/tts_impl/net/vocoder/loss/: __init__.py  stft.py
src/tts_impl/net/vocoder/nsf/: __init__.py  generator.py  oscillator.py  source.py
src/tts_impl/net/vocoder/nsf_grux/: __init__.py  generator.py  lightning.py
src/tts_impl/net/vocoder/nsf_hifigan/: __init__.py  filter.py  generator.py  lightning.py  oscillator.py
src/tts_impl/net/vocoder/vocos/: __init__.py  generator.py
src/tts_impl/net/vocoder/wavehax/: generator.py
src/tts_impl/preprocess/: __init__.py  audio.py  base.py  mel_processing.py  pitch_estimation.py  tts.py  vocoder.py
src/tts_impl/transforms/: __init__.py  length_regurator.py  log_mel_spectrogram.py  pitch_estimation.py
src/tts_impl/utils/: __init__.py
src/tts_impl/utils/config/: __init__.py  base.py
src/tts_impl/utils/datamodule/: __init__.py  audio.py  tts.py  vc.py
src/tts_impl/utils/dataset/: __init__.py  audio.py  tts.py  vc.py
src/tts_impl/utils/preprocess/: __init__.py  audio.py  base.py  tts.py  vc.py
src/tts_impl/utils/recipe/: __init__.py  base.py
test/: test_aligner.py  test_convnext.py  test_ddsp.py  test_differentiable_length_regulator.py  test_dwc_conv.py  test_f0_estimation.py  test_f0_interpolation.py  test_g2p.py  test_grux.py  test_hifigan.py  test_lr.py  test_mamba.py  test_mas.py  test_mingru.py  test_nhvc.py  test_norm.py  test_norm_stateful.py  test_nsf_hifigan.py  test_nsf_vits.py  test_pad.py  test_pe.py  test_transforms.py  test_vits.py
tests/: test_aligner.py  test_ddsp.py  test_hfigan.py  test_hifigan.py  test_lr.py  test_nsf_hifigan.py  test_pe.py  test_vits.py
